Changed default value

--- a/src/contract-details.html
+++ b/src/contract-details.html
@@ -12,8 +12,8 @@
     <div class="panel">
       <div class="panel-header">
         <img id="contractLogo" src="" height="24"></img>
-        <h1 id="contractName">Contract name</h1>
-        <span id="contractTicker" class="ticker"> (NMN)</span>
+        <h1 id="contractName"></h1>
+        <span id="contractTicker" class="ticker"></span>
       </div>
       <!-- <span id="contractAddress" class="address">0xcca0c9c38dF61cA</span> -->
       <ul>
