--- a/src/popup.html
+++ b/src/popup.html
@@ -4,25 +4,30 @@
 		padding: 10px;
 		height: 500px;
 		width: 300px;
-		font-family: Helvetica, Ubuntu, Arial, sans-serif;
+		font-family: Helvetica, Arial, sans-serif;
 	}
 	h1 {
 		font-size: 2em;
+		margin-left: 15px;
+		margin-top: 0;
+		margin-bottom: 0;
 	}
 	.title {
 		display: flex;
-		align-items: center;
+		align-items: baseline;
 	}
 </style>
 
 <div id="mainPopup">
 	<div class="title">
-		<img src="../../icons/icon48.png" height="24">
+		<img src="img/logo.svg" height="18">
 		<h1>Pepper</h1>
 	</div>
 <h3>Smart Contract Checker</h3>
 <p>Pepper allows you to quickly scan a contract address to check if belongs to a legit project.</p>
-<p>How to use:<br>
-	1. Click and highlight the address.<br>
-	2. Right click and select "Check contract" in the options menu.</p>
+<h3>How to use:</h3>
+	<p>1. Click and highlight the address.</p>
+	<img src="img/step-1.svg" height="80">
+	<p>2. Right click and select "Check contract" in the options menu.</p>
+	<img src="img/step-2.svg" width="300">
 </div>
