Display etherscan link on failed contract

--- a/src/contract-details.html
+++ b/src/contract-details.html
@@ -39,7 +39,10 @@
         <div id="contractError">
           <img src="img/search.svg" height="128">
           <h1>Contract not found</h1>
-          <p>We could not find a smart contract with that address in our database.<br> The smart contract although, might exist.</p>
+          <p>We could not find a smart contract with that address in our database.<br> The smart contract although, might exist.<br><br>Check Etherscan for more info:</p>
+          <span class="addressHelper">
+            <a id="etherscanHelper" href="" target="_blank"></a>
+          </span>
         </div>
     </div>
   </div>
