--- a/src/popup.html
+++ b/src/popup.html
@@ -1,33 +1,78 @@
 <!doctype html>
+<html>
+<head>
 <style type="text/css">
+html, body {
+	margin: 0;
+	padding: 0;
+	height: 100%;
+	width: 100%;
+	color: #8b949e;
+	@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500&display=swap');
+	font-family: 'Work Sans', sans-serif;
+}
 	#mainPopup {
-		padding: 10px;
-		height: 500px;
+		padding: 15px;
+		height: 350px;
 		width: 300px;
-		font-family: Helvetica, Arial, sans-serif;
+		background-color: #0D1117;
 	}
 	h1 {
 		font-size: 2em;
-		margin-left: 15px;
+		font-weight: 400;
 		margin-top: 0;
 		margin-bottom: 0;
+		color: #f2f2f2;
 	}
+	h1 img {
+		margin-right: 15px;
+	}
+
+	h3 {
+		margin: 0;
+		font-size: 1rem;
+		font-weight: 500;
+	}
+
+	p {
+		font-size: 0.9rem;
+	}
+
 	.title {
 		display: flex;
+		justify-content: space-between;
 		align-items: baseline;
+		margin-bottom: 15px;
+	}
+
+	.label {
+		background-color: #161B22;
+		padding: 2px 8px;
+		border-radius: 10px;
+		margin-left: 48px;
+	}
+
+	.instructions {
+		background-color: #161B22;
+		padding: 15px;
+		margin-top: 30px;
+		border-radius: 8px;
 	}
 </style>
-
+</head>
+<body>
 <div id="mainPopup">
 	<div class="title">
-		<img src="img/logo.svg" height="18">
-		<h1>Pepper</h1>
+		<h1><img src="img/logo.svg" height="18">Pepper</h1>
+		<span class="label">v 1.1</span>
 	</div>
 <h3>Smart Contract Checker</h3>
 <p>Pepper allows you to quickly scan a contract address to check if belongs to a legit project.</p>
-<h3>How to use:</h3>
-	<p>1. Click and highlight the address.</p>
-	<img src="img/step-1.svg" height="80">
-	<p>2. Right click and select "Check contract" in the options menu.</p>
-	<img src="img/step-2.svg" width="300">
+	<div class="instructions">
+		<h3>How to use:</h3>
+		<p>1. Click and highlight the address.</p>
+		<p>2. Right click and select "Check contract" in the options menu.</p>
+	</div>
 </div>
+</body>
+</html>
