--- a/src/contract-details.html
+++ b/src/contract-details.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <nav class="navigation">
-    <img src="img/logo.svg" height="24">
+    <h1><img src="img/logo.svg" height="24">Pepper</h1>
     <h2 id="contractAddress" class="address"></h2>
   </nav>
   <div class="container">
