Added loading spinner

--- a/src/contract-details.html
+++ b/src/contract-details.html
@@ -10,29 +10,30 @@
   </nav>
   <div class="container">
     <div class="panel">
+      <img id="loadingSpinner" src="img/loading.gif" height="48">
       <div class="panel-header">
-        <img id="contractLogo" src="" height="24"></img>
+        <img id="contractLogo" class="hidden" src="" height="24"></img>
         <h1 id="contractName"></h1>
         <span id="contractTicker" class="ticker"></span>
       </div>
       <ul>
-        <li id="websiteElement">
+        <li id="websiteElement" class="hidden">
           <img src="img/browser.svg" height="24">
           <a id="website" href="" target="_blank">Website</a>
         </li>
-        <li id="githubElement">
+        <li id="githubElement" class="hidden">
           <img src="img/github.svg" height="24">
           <a id="github" href="" target="_blank">Github</a>
         </li>
-        <li id="etherscanElement">
+        <li id="etherscanElement" class="hidden">
           <img src="img/file-search.svg" height="24">
           <a id="etherscan" href="" target="_blank">Etherscan</a>
         </li>
-        <li id="twitterElement">
+        <li id="twitterElement" class="hidden">
           <img src="img/twitter.svg" height="24">
           <a id="twitter" href="" target="_blank">Twitter</a>
         </li>
-        <li id="telegramElement">
+        <li id="telegramElement" class="hidden">
           <img src="img/telegram.svg" height="24">
           <a id="telegram" href="" target="_blank">Telegram</a>
         </li>
