Added token price to contract-details

--- a/src/contract-details.html
+++ b/src/contract-details.html
@@ -17,6 +17,9 @@
         <span id="contractTicker" class="ticker"></span>
       </div>
       <ul>
+        <li id="priceElement" class="hidden">
+          <h2 id="tokenPrice"></h2>
+        </li>
         <li id="websiteElement" class="hidden">
           <img src="img/browser.svg" height="24">
           <a id="website" href="" target="_blank">Website</a>
