Added uniswap support

--- a/src/contract-details.html
+++ b/src/contract-details.html
@@ -32,6 +32,10 @@
           <img src="img/file-search.svg" height="24">
           <a id="etherscan" href="" target="_blank">Etherscan</a>
         </li>
+        <li id="uniswapElement" class="hidden">
+          <img src="img/uni.svg" height="24">
+          <a id="uniswap" href="" target="_blank">Uniswap</a>
+        </li>
         <li id="twitterElement" class="hidden">
           <img src="img/twitter.svg" height="24">
           <a id="twitter" href="" target="_blank">Twitter</a>
@@ -43,10 +47,9 @@
         <div id="contractError">
           <img src="img/search.svg" height="128">
           <h1>Contract not found</h1>
-          <p>We could not find a smart contract with that address in our database.<br> The smart contract although, might exist.<br><br>Check Etherscan for more info:</p>
-          <span class="addressHelper">
-            <a id="etherscanHelper" href="" target="_blank"></a>
-          </span>
+          <p>We could not find a smart contract with that address in our database.<br> The smart contract although, might exist.<br><br>Check Etherscan or Uniswap for more info:</p>
+            <a id="etherscanHelper" href="" target="_blank"><img src="img/etherscan.svg" height="48"></a>
+            <a id="uniswapHelper" href="" target="_blank"><img src="img/uni.svg" height="48"></a>
         </div>
     </div>
   </div>
